Implement Find Functionality
Part of #4